--- a/package.json
+++ b/package.json
@@ -139,6 +139,8 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@commitlint/types": "^17.4.4",
     "@electron/notarize": "^2.1.0",
+    "@testing-library/react": "^15.0.7",
+    "@testing-library/user-event": "^14.5.2",
     "@types/backbone": "1.4.2",
     "@types/blueimp-load-image": "^5.16.2",
     "@types/buffer-crc32": "^0.2.0",
@@ -146,6 +148,7 @@
     "@types/bytebuffer": "^5.0.41",
     "@types/chai": "4.2.18",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/chai-dom": "^1.11.3",
     "@types/classnames": "2.2.3",
     "@types/config": "0.0.34",
     "@types/dompurify": "^2.0.0",
@@ -174,6 +177,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bytes": "^0.1.2",
+    "chai-dom": "^1.12.0",
     "cross-env": "^6.0.3",
     "css-loader": "^6.7.2",
     "dmg-builder": "23.6.0",
