--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "@types/filesize": "3.6.0",
     "@types/firstline": "^2.0.2",
     "@types/fs-extra": "5.0.5",
+    "@types/jsdom": "^21.1.6",
     "@types/libsodium-wrappers-sumo": "^0.7.5",
     "@types/linkify-it": "^3.0.2",
     "@types/lodash": "^4.14.194",
