--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "loader-utils": "^2.0.4",
     "http-cache-semantics": "^4.1.1",
     "terser": "^5.14.2",
-    "minimatch": "^3.0.5",
-    "libsession_util_nodejs": "portal:/home/audric/pro/contribs/libsession-util-nodejs"
+    "minimatch": "^3.0.5"
   },
   "scripts": {
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
@@ -62,7 +61,7 @@
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
     "ready": "yarn build-everything && yarn lint-full && yarn test",
-    "postinstall": "yarn patch-package && yarn electron-builder install-app-deps",
+    "postinstall": "yarn patch-package",
     "update-git-info": "node ./build/updateLocalConfig.js",
     "worker:utils": "webpack  --config=./utils.worker.config.js",
     "worker:libsession": "rimraf 'ts/webworker/workers/node/libsession/*.node' && webpack  --config=./libsession.worker.config.js",
@@ -96,7 +95,7 @@
     "fs-extra": "9.0.0",
     "glob": "10.3.10",
     "image-type": "^4.1.0",
-    "libsession_util_nodejs": "https://github.com/oxen-io/libsession-util-nodejs/releases/download/v0.4.3/libsession_util_nodejs-v0.4.3.tar.gz",
+    "libsession_util_nodejs": "link:../libsession-util-nodejs",
     "libsodium-wrappers-sumo": "^0.7.9",
     "linkify-it": "^4.0.1",
     "lodash": "^4.17.21",
@@ -158,7 +157,7 @@
     "@types/lodash": "^4.14.194",
     "@types/mocha": "5.0.0",
     "@types/node-fetch": "^2.5.7",
-    "@types/react": "^17.0.2",
+    "@types/react": "17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.24",
     "@types/react-virtualized": "9.18.12",
