fix: more review feedback part 2

--- a/package.json
+++ b/package.json
@@ -304,6 +304,7 @@
       "ts/**/*.js",
       "ts/*.js",
       "!dist/**",
+      "stylesheets/fonts.css",
       "stylesheets/dist/*",
       "!js/register.js",
       "preload.js",
