fix: a few issues with group invite job/refresh state

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
     "ready": "yarn build-everything && yarn lint-full && yarn test",
-    "postinstall": "yarn patch-package",
+    "postinstall": "yarn patch-package && yarn electron-builder install-app-deps",
     "update-git-info": "node ./build/updateLocalConfig.js",
     "worker:utils": "webpack  --config=./utils.worker.config.js",
     "worker:libsession": "rimraf 'ts/webworker/workers/node/libsession/*.node' && webpack  --config=./libsession.worker.config.js",
@@ -95,7 +95,7 @@
     "fs-extra": "9.0.0",
     "glob": "10.3.10",
     "image-type": "^4.1.0",
-    "libsession_util_nodejs": "link:../libsession-util-nodejs",
+    "libsession_util_nodejs": "https://github.com/oxen-io/libsession-util-nodejs/releases/download/v0.3.19/libsession_util_nodejs-v0.3.19.tar.gz",
     "libsodium-wrappers-sumo": "^0.7.9",
     "linkify-it": "^4.0.1",
     "lodash": "^4.17.21",
