--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "react-contexify": "^6.0.0",
     "react-dom": "18.3.1",
     "react-draggable": "^4.4.4",
+    "react-error-boundary": "^4.0.13",
     "react-h5-audio-player": "^3.2.0",
     "react-intersection-observer": "^9.7.0",
     "react-mentions": "^4.4.9",
