--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -35,5 +35,11 @@ jobs:
         if: runner.os == 'Linux'
         run: yarn lint-full
 
+      - name: Enforce yarn.lock has no duplicates
+        # no need to deduplicate yarn.lock on all platforms. Just do it once on the quicker one
+        if: runner.os == 'Linux'
+        run: yarn yarn-deduplicate yarn.lock --fail
+
+
       - name: Unit Test
         run: yarn test
