--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Checkout git repo
         uses: actions/checkout@v3
 
-      - uses: ./actions/setup_and_build
+      - name: Setup & Build
+        uses: ./actions/setup_and_build
 
       - name: Lint Files
         # no need to lint files on all platforms. Just do it once on the quicker one
@@ -36,10 +37,7 @@ jobs:
         run: yarn lint-full
 
       - name: Enforce yarn.lock has no duplicates
-        # no need to deduplicate yarn.lock on all platforms. Just do it once on the quicker one
-        if: runner.os == 'Linux'
-        run: yarn yarn-deduplicate yarn.lock --fail
-
+        uses: ./actions/deduplicate_fail
 
       - name: Unit Test
         run: yarn test
