fix: add a dedup-yarn-lock yarn script and use it

--- a/actions/deduplicate_fail/action.yml
+++ b/actions/deduplicate_fail/action.yml
@@ -6,4 +6,4 @@ runs:
     - name: Enforce yarn.lock has no duplicates
       shell: bash
       if: runner.os == 'Linux'
-      run: yarn yarn-deduplicate yarn.lock --fail
+      run: yarn dedup-yarn-lock --fail
