--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "update-git-info": "node ./build/updateLocalConfig.js",
     "worker:utils": "webpack  --config=./utils.worker.config.js",
     "worker:libsession": "rimraf 'ts/webworker/workers/node/libsession/*.node' && webpack  --config=./libsession.worker.config.js",
-    "dedup-yarn-lock": "yarn-deduplicate yarn.lock",
+    "dedup-yarn-lock": "npx --yes yarn-deduplicate yarn.lock",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -215,8 +215,7 @@
     "ts-loader": "^9.4.2",
     "typescript": "^5.5.4",
     "webpack": "^5.76.3",
-    "webpack-cli": "^5.1.4",
-    "yarn-deduplicate": "^6.0.2"
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": "18.15.0"
