--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "start-dev:pretty": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron . | npx bunyan",
     "build:workers": "yarn worker:utils && yarn worker:libsession",
     "build:locales": "python3 ./tools/localization/generateLocales.py --generate-types --print-problems --error-on-problems --error-old-dynamic-variables",
-    "build:locales-soft": "python3 ./tools/localization/generateLocales.py --generate-types --print-problems",
+    "build:locales-soft": "python3 ./tools/localization/generateLocales.py --generate-types --print-problems --print-problem-strings",
     "watch": "yarn clean && yarn protobuf && yarn update-git-info && yarn build-everything:watch",
     "protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
     "sass": "rimraf 'stylesheets/dist/' && webpack  --config=./sass.config.js",
