--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -25,7 +25,8 @@ jobs:
       fail-fast: false
       matrix:
         # We want a mac arm64 build, and according to this https://github.com/actions/runner-images#available-images macos-14 is always arm64
-        os: [windows-2022, ubuntu-20.04, macos-12, macos-14]
+        # macos-14 is disabled for now as we hit our free tier limit for macos builds
+        os: [windows-2022, ubuntu-20.04, macos-12]
     env:
       SIGNAL_ENV: production
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
