--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,8 +6,8 @@ on:
     branches:
       - clearnet
       - unstable
-      - release/
-      - ci/
+      - 'release/**'
+      - 'ci/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
