--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -1,5 +1,4 @@
-# This script will build session production binaries anytime a branch is updated
-name: Session Build Binaries
+name: Session Desktop
 
 on:
   push:
@@ -40,45 +39,22 @@ jobs:
       - name: Setup & Build
         uses: ./actions/setup_and_build
 
+      - name: Lint Files
+        # no need to lint files on all platforms. Just do it once on the quicker one
+        if: runner.os == 'Linux'
+        run: yarn lint-full
+
       - name: Enforce yarn.lock has no duplicates
         uses: ./actions/deduplicate_fail
+      - name: Unit Test
+        run: yarn test
 
-      - name: Build windows production binaries
-        if: runner.os == 'Windows'
-        run: node_modules\.bin\electron-builder --config.extraMetadata.environment=%SIGNAL_ENV% --publish=never --config.directories.output=release
+      - name: Build but do not publish
+        # we want this to run always, except on "push" to "master"
+        if: github.event_name != 'push' || github.ref != 'master'
+        uses: ./actions/build_no_publish
 
-      - name: Build mac production binaries
-        if: runner.os == 'macOS'
-        run: |
-          source ./build/setup-mac-certificate.sh
-          $(yarn bin)/electron-builder --config.extraMetadata.environment=$SIGNAL_ENV --config.mac.bundleVersion=${{ github.ref }} --publish=never --config.directories.output=release
-        env:
-          MAC_CERTIFICATE: ${{ secrets.MAC_CERTIFICATE }}
-          MAC_CERTIFICATE_PASSWORD: ${{ secrets.MAC_CERTIFICATE_PASSWORD }}
-          SIGNING_APPLE_ID: ${{ secrets.SIGNING_APPLE_ID }}
-          SIGNING_APP_PASSWORD: ${{ secrets.SIGNING_APP_PASSWORD }}
-          SIGNING_TEAM_ID: ${{ secrets.SIGNING_TEAM_ID }}
-
-      - name: Build linux production binaries
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get install -y rpm
-          yarn build-release
-
-      - name: Remove unpacked files
-        run: |
-          ls -d -- */ | xargs -I{} echo "Removing {}"
-          ls -d -- */ | xargs -I{} rm -rf {}
-        shell: bash
-        working-directory: ./release/
-
-      - name: Remaining files
-        run: ls .
-        shell: bash
-        working-directory: ./release/
-
-      - name: Upload Production Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ runner.os }}-${{ runner.arch }}-production
-          path: release
+      - name: Build & publish
+        # we want this to run only when on "push" to "master"
+        if: github.event_name == 'push' && github.ref == 'master'
+        uses: ./actions/build_publish
