chore: improve CI workflow speed and usage

--- a/package.json
+++ b/package.json
@@ -49,19 +49,9 @@
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
     "start-prod-test": "cross-env NODE_ENV=production NODE_APP_INSTANCE=$MULTI electron .",
     "test": "mocha",
-    "build-release": "run-script-os",
-    "build-release-non-linux": "yarn build-everything && cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
-    "build-release:win32": "yarn build-release-non-linux",
-    "build-release:macos": "yarn build-release-non-linux",
-    "build-release:linux": "yarn sedtoDeb; yarn build-release-non-linux && yarn sedtoAppImage && yarn build-release-non-linux && yarn sedtoDeb",
-    "build-release-publish": "run-script-os",
-    "build-release-publish-non-linux": "yarn build-everything && cross-env SIGNAL_ENV=production $(yarn bin)/electron-builder --config.extraMetadata.environment=$SIGNAL_ENV --publish=always",
-    "build-release-publish:win32": "yarn build-release-publish-non-linux",
-    "build-release-publish:macos": "yarn build-release-publish-non-linux",
-    "build-release-publish:linux": "yarn sedtoDeb; yarn build-release-publish-non-linux && yarn sedtoAppImage && yarn build-release-publish-non-linux && yarn sedtoDeb",
-    "appImage": "yarn sedtoAppImage; yarn build-release-non-linux; yarn sedtoDeb",
-    "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
-    "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
+    "build-release-base": "cross-env NODE_ENV=production electron-builder --config.extraMetadata.environment=production",
+    "build-release": "yarn build-release-base --publish=never --config.directories.output=release",
+    "build-release-publish": "yarn build-release-base --publish=always",
     "ready": "yarn dedup-yarn-lock --fail && yarn build-everything && yarn lint-full && yarn test",
     "postinstall": "yarn patch-package && yarn electron-builder install-app-deps",
     "update-git-info": "node ./build/updateLocalConfig.js",
@@ -207,7 +197,6 @@
     "postinstall-prepare": "^1.0.1",
     "prettier": "3.2.5",
     "protobufjs-cli": "^1.1.1",
-    "run-script-os": "^1.1.6",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
     "sinon": "9.0.2",
@@ -272,7 +261,7 @@
         "StartupWMClass": "Session"
       },
       "asarUnpack": "node_modules/spellchecker/vendor/hunspell_dictionaries",
-      "target": ["deb", "rpm", "freebsd"],
+      "target": ["deb"],
       "icon": "build/icon-linux.icns"
     },
     "asarUnpack": [
@@ -294,8 +283,8 @@
     "files": [
       "package.json",
       "config/default.json",
-      "config/${env.SIGNAL_ENV}.json",
-      "config/local-${env.SIGNAL_ENV}.json",
+      "config/production.json",
+      "config/local-production.json",
       "background.html",
       "about.html",
       "password.html",
