--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -25,7 +25,7 @@ concurrency:
 
 env:
   # we want to publish on "push to master" only. When we don't want to publish, we want to upload artefacts
-  SHOULD_PUBLISH: ${{ github.event_name == 'push' && github.ref == 'master' }}
+  SHOULD_PUBLISH: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
 
 jobs:
   build_linux:
