fix: fix the sed in CI so we build for the correct target

--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -77,7 +77,7 @@ jobs:
         # we want this to run only when on "push" to "master"
         if: ${{ env.SHOULD_PUBLISH == 'true' }}
         run: |
-          sed -i 's/\"target\": \\[\"deb\"\\]/\"target\": \"${{ matrix.pkg_to_build }}\"/g' package.json; yarn build-release-publish
+          sed -i 's/"target": \["deb"\]/"target": "${{ matrix.pkg_to_build }}"/g' package.json && yarn build-release-publish
 
   build_windows:
     runs-on: windows-2022
