--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "1.15.0",
   "license": "GPL-3.0",
   "author": {
-    "name": "Oxen Labs",
-    "email": "team@oxen.io"
+    "name": "Session Foundation",
+    "email": "contact@session.foundation"
   },
   "repository": {
     "type": "git",
