--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -31,6 +31,7 @@ jobs:
   build_linux:
     runs-on: ubuntu-20.04
     strategy:
+      fail-fast: false
       matrix:
         # this needs to be a valid target of https://www.electron.build/linux#target
         pkg_to_build: ['deb', 'rpm', 'freebsd', 'AppImage']
